# snn-playground-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
src/: config.py  main.py
src/routers/: health.py  simulation.py
src/schemas/: simulation.py
src/utils/: dataset.py  model.py  neuron.py  plots.py
