[project]
name = "kmc-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "spikingjelly>=0.0.0.0.14",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.42.0",
]
